--- a/backend/views/partials/navbar.ejs
+++ b/backend/views/partials/navbar.ejs
@@ -27,6 +27,10 @@
       class="item right custom-right <%= props?.activeNavTab === 'sponsors' ? 'active' : '' %>">
       <i class="ui icon handshake"></i>Sponsors
     </a>
+    <a href="/users/manage"
+      class="item right custom-right <%= props?.activeNavTab === 'users' ? 'active' : '' %>">
+      <i class="ui icon users"></i>Users
+    </a>
     <!-- dropdown -->
     <div class="ui pointing dropdown link item" id="main-nav-dropdown" tabindex="0">
      <span style="color: #ccc">More <i class="dropdown icon grey"></i></span> 
