--- a/backend/views/sponsors/manage.ejs
+++ b/backend/views/sponsors/manage.ejs
@@ -74,9 +74,9 @@
             <button type="submit" class="ui mini icon button" title="Move down"><i class="arrow down icon"></i></button>
           </form>
           <% } %>
-          <button class="ui mini icon red button" onclick="confirmDelete(<%= sponsor.id %>, '<%= sponsor.name.replace(/'/g, "\\'") %>')" title="Delete">
-            <i class="trash icon"></i>
-          </button>
+          <form method="POST" action="/sponsors/delete/<%= sponsor.id %>" style="display:inline" onsubmit="return confirm('Delete &quot;<%= sponsor.name.replace(/'/g, "\\'") %>&quot;? This cannot be undone.')">
+            <button type="submit" class="ui mini icon red button" title="Delete"><i class="trash icon"></i></button>
+          </form>
         </td>
       </tr>
       <% }) %>
@@ -108,25 +108,3 @@
   <% } %>
 </div>
 
-<div class="ui mini modal" id="delete-modal">
-  <div class="header">Delete Sponsor</div>
-  <div class="content">
-    <p>Are you sure you want to delete "<span id="delete-name"></span>"? This cannot be undone.</p>
-  </div>
-  <div class="actions">
-    <div class="ui cancel button">Cancel</div>
-    <form id="delete-form" method="POST" style="display:inline">
-      <button type="submit" class="ui red button">Delete</button>
-    </form>
-  </div>
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-<script>
-  function confirmDelete(id, name) {
-    document.getElementById('delete-name').textContent = name;
-    document.getElementById('delete-form').action = '/sponsors/delete/' + id;
-    $('.ui.modal').modal('show');
-  }
-</script>
